fix defect of column header aligned as vertical center when sorted

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -458,21 +458,21 @@
 
     .ember-table-content-container {
       display: flex;
-      align-items: flex-start;
+      align-items: flex-end;
       height: 100%;
 
       .ember-table-content {
         flex: 1;
         font-weight: bold;
         overflow: hidden;
-        align-self: center;
         position: static;
+        margin-bottom: 2px;
       }
 
       .column-sort-indicator {
-        padding-left: 5px;
+        padding:  5px 5px 5px 0;
         display: inline;
-        align-self: center;
+        margin-bottom: 2px;
       }
     }
   }
